--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "webpair",
-  "version": "0.0.1",
-  "description": "A multi-functional WhatsApp bot Web paircode.",
-  "main": "index.js",
-  "type": "module",
+    "description": "qr",
+    "main": "dexter.js",
   "engines" : { 
     "npm" : ">=9.7.2",
     "node" : ">=20.0.0"
     },
-  "scripts": {
-    "start": "node index.js",
-    "stop": "echo 'No stop functionality (use Ctrl+C to stop)'",
-    "restart": "echo 'No restart functionality (use manual restart)'"
+    "scripts": {
+    "start": "node dexter.js"
   },
-  "author": "GlobalTechInfo",
-  "license": "ISC",
-  "description": "",
+  "author": "Maher-Zubair",
+  "license": "GPL-3.0 license",
   "dependencies": {
     "@whiskeysockets/baileys": "github:seiren-primrose/PL-Baileys",
-    "qrcode": "^1.5.3",
-    "awesome-phonenumber": "^2.64.0",
-    "pino": "^8.1.0",
-    "phone" : "3.1.30",
-    "body-parser": "^1.20.1",
-    "express": "^4.18.1",
-    "path": "^0.12.7",
-    "megajs": "^1.1.0"
-  }
+    "maher-zubair-baileys": "^6.6.5",
+    "qrcode": "^1.5.4",
+    "awesome-phonenumber": "^7.5.0",
+    "pino": "^9.6.0",
+    "phone" : "3.1.59",
+    "body-parser": "^2.2.0",
+    "pastebin-js": "^1.0.6",
+    "express": "^5.1.0",
+    "path": "^0.12.7"
+   }
 }
